--- a/assets/index.html
+++ b/assets/index.html
@@ -18,8 +18,26 @@
             <li>
                 <strong>total</strong> aproximadamente 10 minutos
             </li>
+            <li>
+                <strong>preparo</strong> 5 minutos
+            </li>
+            <li>
+                <strong>cozimento</strong> 5 minutos
+            </li>
         </ul>
         <div>
+            <div>
+                <h2>ingredientes</h2>
+
+                <ul>
+                    <li>2-3 ovos grandes </li>
+                    <li> sal a gosto</li>
+                    <li>pimenta a gosto</li>
+                    <li>1 colher de sopa de manteiga ou oleo</li>
+                    <li>Recheios opcionais: queijo, legumes picados, carnes cozidas, ervas.</li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
 </body>
 </html>
