--- a/assets/index.html
+++ b/assets/index.html
@@ -35,9 +35,40 @@
                     <li>pimenta a gosto</li>
                     <li>1 colher de sopa de manteiga ou oleo</li>
                     <li>Recheios opcionais: queijo, legumes picados, carnes cozidas, ervas.</li>
-                    <li></li>
+                    
                 </ul>
             </div>
+            <hr>
+
+
+            <div>
+                <h2>modo de preparo
+
+                    <ol>
+                        <li>
+                            <strong>bata os ovos </strong> Bata os ovos: Em uma tigela, bata os ovos com uma pitada de sal e pimenta até que estejam bem misturados. Você pode adicionar uma colher de sopa de água ou leite para obter uma textura mais fofa.
+                        </li>
+                        <li>
+                            <strong>aqueça a frigideira </strong> Aqueça a frigideira: Coloque uma frigideira antiaderente em fogo médio e adicione manteiga ou óleo.
+
+                        </li>
+                        <li>
+                            <strong>cozinhe a omelete:</strong> Cozinhe a omelete: Assim que a manteiga estiver derretida e borbulhando, despeje os ovos. Incline a frigideira para garantir que os ovos cubram uniformemente a superfície.
+                        </li>
+                        <li>
+                            <strong>adicione os recheios (opicional) :</strong>
+                            Adicione os recheios (opcional): Quando os ovos começarem a firmar nas bordas, mas ainda estiverem um pouco líquidos no centro, espalhe os recheios escolhidos sobre uma metade da omelete.
+                        </li>
+                        <li>
+                            <strong>dobre e sirva </strong> Dobre e sirva: Enquanto a omelete continua a cozinhar, cuidadosamente levante uma borda e dobre sobre os recheios. Deixe cozinhar por mais um minuto, em seguida, deslize-a para um prato.
+                        </li>
+                        <li>
+                            <strong>saboreie</strong> Saboreie: Sirva quente, com sal e pimenta adicionais, se necessário.
+                        </li>
+                    </ol>
+                </h2>
+            </div>
         </div>
+    
 </body>
 </html>
