--- a/assets/index.html
+++ b/assets/index.html
@@ -68,6 +68,33 @@
                     </ol>
                 </h2>
             </div>
+<hr>
+            <div>
+<h2>informações nutricionais</h2>
+
+<p>a tabela abixo mostra os valores nutricionais por porção sem os recheios adicionais
+</p>
+
+<table>
+    <tr>
+        <th>calorias</th>
+        <td>277kcal</td>
+    </tr>
+    <tr>
+        <th>carboidratos</th>
+        <td>0g</td>
+    </tr>
+    <tr>
+        <th>proteina</th>
+        <td>20g</td>
+    </tr>
+    <tr>
+        <th>dordira</th>
+        <td>22g</td>
+    </tr>
+</table>
+
+            </div>
         </div>
     
 </body>
