sexto commit do html

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,7 @@
 
         <h1>Receita de omelete simples </h1>
         <p>    Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carnes.<p>  
-    <div>
+    <div class="tempo">
         <h2>tempo de preparo </h2>
 
         <ul>
@@ -30,7 +30,7 @@
             </li>
         </ul>
         <div>
-            <div>
+            <div class="ingredientes">
                 <h2>ingredientes</h2>
 
                 <ul>
@@ -45,7 +45,7 @@
             <hr>
 
 
-            <div>
+            <div class="modo">
                 <h2>modo de preparo
 
                     <ol>
@@ -73,7 +73,7 @@
                 </h2>
             </div>
 <hr>
-            <div>
+            <div class="informacoes">
 <h2>informações nutricionais</h2>
 
 <p>a tabela abixo mostra os valores nutricionais por porção sem os recheios adicionais
