sexto commit do css

--- a/assets/index.html
+++ b/assets/index.html
@@ -20,7 +20,7 @@
 
         <ul>
             <li>
-                <strong>total</strong> aproximadamente 10 minutos
+                <strong>total :</strong> aproximadamente 10 minutos
             </li>
             <li>
                 <strong>preparo</strong> 5 minutos
@@ -50,7 +50,7 @@
 
                     <ol>
                         <li>
-                            <strong>bata os ovos </strong> Bata os ovos: Em uma tigela, bata os ovos com uma pitada de sal e pimenta até que estejam bem misturados. Você pode adicionar uma colher de sopa de água ou leite para obter uma textura mais fofa.
+                            <strong>bata os ovos :</strong> Bata os ovos: Em uma tigela, bata os ovos com uma pitada de sal e pimenta até que estejam bem misturados. Você pode adicionar uma colher de sopa de água ou leite para obter uma textura mais fofa.
                         </li>
                         <li>
                             <strong>aqueça a frigideira </strong> Aqueça a frigideira: Coloque uma frigideira antiaderente em fogo médio e adicione manteiga ou óleo.
